[b][color=orange]v3.33[/color], 20.08.2018[/b][list]
[*]Update EFL.
[*]Reskinned the ScrappingMachine.
[*]Reskinned GarrisonUI.
[*]Updated Azerite Skin.
[*]Change the FrameStrata for the ObjectiveTracker.
[*]Added an option to enable/disable the skin for the BossButton.
[*]Added custom emojis :salt: :monkaomega:[/list]

[b][color=orange]v3.32[/color], 13.08.2018[/b][list]
[*]Added a scale option for the MicroBar.
[*]Added a show/hide option for the friends/guild text on the MicroBar.
[*]Add back the default QuickJoinToastButton and skinned it.
[*]Removed the QuickJoinNotifications. We use the blizz default now.
[*]Fixed an issue in the DBM skin which not allow to resize the bars.
[*]Added a text overlay to the Minimap which will show who pinged.
[*]Added back CooldownFlash!!
[*]Added a text option for the MicroBar.
[*]A lot of skin updates.[/list]

[b][color=orange]v3.31[/color], 30.07.2018[/b][list]
[*]Fix the WorldMap Title Frame.
[*]Updated the Talent skin.
[*]Added back my time datatext.
[*]Fix the LFGListInviteDialog Role Icons.[/list]

[b][color=orange]v3.30[/color], 29.07.2018[/b][list]
[*]Added a panel to the chat to place the Voice Buttons.
[*]-> You have to do the setup for Chat & ActionBars again.
[*]Fixed some skin related issues/errors.
[*]Use the new ElvUI MapInfo Table to get coords. Thx Simpy <3.
[*]Remove the Raid Buff Reminder.[/list]

[b][color=orange]v3.29[/color], 18.07.2018[/b][list]
[*]Fix a nil error with linking Mythic Keystones.[/list]

[b][color=orange]v3.28[/color], 18.07.2018[/b][list]
[*]Prevent some rare nil errors with coords.[/list]

[b][color=orange]v3.27[/color], 17.07.2018[/b][list]
[*]8.0 Compatibily Version.
[*]For a full changelog have a look at: https://git.tukui.org/Merathilis/ElvUI_MerathilisUI/commits/development[/list]

[b][color=orange]v3.26[/color], 16.04.2018[/b][list]
[*]Prevent a rare nil error in my Styling function.
[*]Add a frame to display missing Flask, Food, Runes. Thx Exeil for the idea. <3