@@ -1,4 +1,11 @@
-** v3.33, 13.08.2018**
+** v3.34, 22.08.2018**
+* Fixed an issue that the Changelog wasn't showing on version bumb.
+* Added the option back to hide the Coords on the LocPanel.
+* Ajust some DataTexts in my install.
+* Add some frames to the E.FrameLocks. This will hide correctly some frames in Pet Battles.
+* Some skin adjustments.
+
+** v3.33, 20.08.2018**
 * Update EFL.
 * Reskinned the ScrappingMachine.
 * Reskinned GarrisonUI.
