@@ -1,3 +1,10 @@
+[b][color=orange]v3.34[/color], 22.08.2018[/b][list]
+[*]Fixed an issue that the Changelog wasn't showing on version bumb.
+[*]Added the option back to hide the Coords on the LocPanel.
+[*]Ajust some DataTexts in my install.
+[*]Add some frames to the E.FrameLocks. This will hide correctly some frames in Pet Battles.
+[*]Some skin adjustments.
+
 [b][color=orange]v3.33[/color], 20.08.2018[/b][list]
 [*]Update EFL.
 [*]Reskinned the ScrappingMachine.
